--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vendas",
   "version": "0.1.0",
+  "homepage": "https://decorapapel.com.br/formacaopapeleira/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
